force-app/main/default/objects/CheckFieldsMaster__c/CheckFieldsMaster__c.object-meta.xml
<CustomObject>
    <label>チェック項目マスタ</label>
    <nameField>
        <label>チェック項目マスタ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>