force-app/main/default/objects/CheckFieldsMaster__c/fields/AntisocialArticle__c.field-meta.xml
<CustomField>
    <fullName>AntisocialArticle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>反社条文</label>
    <type>Checkbox</type>
</CustomField>