force-app/main/default/objects/CheckFieldsMaster__c/fields/AreaUpperLimitMessage__c.field-meta.xml
<CustomField>
    <fullName>AreaUpperLimitMessage__c</fullName>
    <label>上限面積_NGメッセージ</label>
    <type>TextArea</type>
</CustomField>