force-app/main/default/objects/CheckFieldsMaster__c/fields/ArticleContentAddition__c.field-meta.xml
<CustomField>
    <fullName>ArticleContentAddition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>条文追加内容</label>
    <type>Checkbox</type>
</CustomField>