force-app/main/default/objects/CheckFieldsMaster__c/fields/BorrowerCancelNotice__c.field-meta.xml
<CustomField>
    <fullName>BorrowerCancelNotice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>借主解約予告</label>
    <type>Checkbox</type>
</CustomField>