force-app/main/default/objects/CheckFieldsMaster__c/fields/ContractAdministrativeFeeCharges__c.field-meta.xml
<CustomField>
    <fullName>ContractAdministrativeFeeCharges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>契約事務手数料</label>
    <type>Checkbox</type>
</CustomField>