force-app/main/default/objects/CheckFieldsMaster__c/fields/FloorPlanRegulationCheck__c.field-meta.xml
<CustomField>
    <fullName>FloorPlanRegulationCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>間取規定</label>
    <type>Checkbox</type>
</CustomField>