force-app/main/default/objects/CheckFieldsMaster__c/fields/FloorPlanRegulationMessage__c.field-meta.xml
<CustomField>
    <fullName>FloorPlanRegulationMessage__c</fullName>
    <label>間取規定_NGメッセージ</label>
    <type>TextArea</type>
</CustomField>