force-app/main/default/objects/CheckFieldsMaster__c/fields/Garage__c.field-meta.xml
<CustomField>
    <fullName>Garage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>駐車場</label>
    <type>Checkbox</type>
</CustomField>