force-app/main/default/objects/CheckFieldsMaster__c/fields/ICLockBattery__c.field-meta.xml
<CustomField>
    <fullName>ICLockBattery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICロック電池</label>
    <type>Checkbox</type>
</CustomField>