force-app/main/default/objects/CheckFieldsMaster__c/fields/KeyExchange__c.field-meta.xml
<CustomField>
    <fullName>KeyExchange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>鍵交換</label>
    <type>Checkbox</type>
</CustomField>