force-app/main/default/objects/CheckFieldsMaster__c/fields/LegalCheck__c.field-meta.xml
<CustomField>
    <fullName>LegalCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リーガルチェック</label>
    <type>Checkbox</type>
</CustomField>