force-app/main/default/objects/CheckFieldsMaster__c/fields/Penalty__c.field-meta.xml
<CustomField>
    <fullName>Penalty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>違約金</label>
    <type>Checkbox</type>
</CustomField>