force-app/main/default/objects/CheckFieldsMaster__c/fields/PetCheck__c.field-meta.xml
<CustomField>
    <fullName>PetCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ペット</label>
    <type>Checkbox</type>
</CustomField>