force-app/main/default/objects/CheckFieldsMaster__c/fields/PetMessage__c.field-meta.xml
<CustomField>
    <fullName>PetMessage__c</fullName>
    <label>ペット_NGメッセージ</label>
    <type>TextArea</type>
</CustomField>