force-app/main/default/objects/CheckFieldsMaster__c/fields/RenewalFeeMessage__c.field-meta.xml
<CustomField>
    <fullName>RenewalFeeMessage__c</fullName>
    <label>更新料_NGメッセージ</label>
    <type>TextArea</type>
</CustomField>