force-app/main/default/objects/CheckFieldsMaster__c/fields/ResidentialLandCreationTargetArea__c.field-meta.xml
<CustomField>
    <fullName>ResidentialLandCreationTargetArea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>宅地造成対象地域</label>
    <type>Checkbox</type>
</CustomField>