force-app/main/default/objects/CheckFieldsMaster__c/fields/SanitizeFee__c.field-meta.xml
<CustomField>
    <fullName>SanitizeFee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>消毒費</label>
    <type>Checkbox</type>
</CustomField>