force-app/main/default/objects/CheckFieldsMaster__c/fields/SedimentDisasterWarningAreaMessage__c.field-meta.xml
<CustomField>
    <fullName>SedimentDisasterWarningAreaMessage__c</fullName>
    <label>土砂災害警戒区内_NGメッセージ</label>
    <type>TextArea</type>
</CustomField>