force-app/main/default/objects/CheckFieldsMaster__c/fields/SeismicResistanceProblemMessage__c.field-meta.xml
<CustomField>
    <fullName>SeismicResistanceProblemMessage__c</fullName>
    <label>耐震上の問題_NGメッセージ</label>
    <type>TextArea</type>
</CustomField>