force-app/main/default/objects/CheckFieldsMaster__c/fields/SinkAreaSanitizeFee__c.field-meta.xml
<CustomField>
    <fullName>SinkAreaSanitizeFee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>水廻り消毒代</label>
    <type>Checkbox</type>
</CustomField>