force-app/main/default/objects/CheckFieldsMaster__c/fields/StructureCheck__c.field-meta.xml
<CustomField>
    <fullName>StructureCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>構造条件</label>
    <type>Checkbox</type>
</CustomField>