force-app/main/default/objects/CheckFieldsMaster__c/fields/TsunamiDisasterWarningAreaMessage__c.field-meta.xml
<CustomField>
    <fullName>TsunamiDisasterWarningAreaMessage__c</fullName>
    <label>津波災害警戒区内_NGメッセージ</label>
    <type>TextArea</type>
</CustomField>