force-app/main/default/objects/CheckFieldsMaster__c/fields/TwentyFourHoursSupportFee__c.field-meta.xml
<CustomField>
    <fullName>TwentyFourHoursSupportFee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>24Hサポート代</label>
    <type>Checkbox</type>
</CustomField>