force-app/main/default/objects/CheckFieldsMaster__c/fields/TypeTermsCheck__c.field-meta.xml
<CustomField>
    <fullName>TypeTermsCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>タイプ条件</label>
    <type>Checkbox</type>
</CustomField>