force-app/main/default/objects/CheckFieldsMaster__c/fields/UpperLimitRentCheck__c.field-meta.xml
<CustomField>
    <fullName>UpperLimitRentCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>上限家賃</label>
    <type>Checkbox</type>
</CustomField>