force-app/main/default/objects/CheckFieldsMaster__c/fields/UpperLimitRentMessage__c.field-meta.xml
<CustomField>
    <fullName>UpperLimitRentMessage__c</fullName>
    <label>上限家賃_NGメッセージ</label>
    <type>TextArea</type>
</CustomField>